alpm-types/src/snapshots/path::invalid_soname_lookup_directory_parser@case_1.snap
---
source: alpm-types/src/path.rs
---
error: invalid shared library prefix delimiter
 | 
 | lib
 | ~~~^ expected shared library prefix `:`
 | 
 = while parsing:
   soname lookup directory: (lib)
   → invalid shared library prefix delimiter
   → expected shared library prefix `:`
